adding autoComplete fro twitter

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body{
     margin: 0;
-    background: #222;
+    background: gray;
     font-family: system-ui;
     display: grid;
     place-content: center;
